# FasterThanMongo

./: CMakeLists.txt  README.md
include/: data.h
src/: data.cpp  main.cpp
